--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 <body>
   <main>
     <h1>Random dogs</h1>
-    
-    <img alt="random dog photo">
+    <section>
+      <img id="img1" alt="random dog photo">
+      <img id="img2" alt="random dog photo">
+      <img id="img3" alt="random dog photo">
+    </section>
     <button type="button" class="main--button">Other dog</button>
     
   </main>
