GET AND POST, API REST

--- a/index.html
+++ b/index.html
@@ -11,20 +11,23 @@
   <main>
     <h1>Dogs app</h1>
 
+    <span id="error"></span>
 
     <section id="randomDogs" >
       <h2 class="title-randomDogs">Randoms Dogs</h2>
+
+      
       <article class="main--randomDogs" >
         <img class="imageDog" id="img1" alt="random dog photo">
-        <button class="main--button">Save dog in favorites</button>
+        <button id="btn1" onclick="saveFavoritesMyDog()" class="main--button">Save dog in favorites</button>
       </article>
       <article class="main--randomDogs">
         <img class="imageDog" id="img2" alt="random dog photo">
-        <button class="main--button">Save dog in favorites</button>
+        <button id="btn1" onclick="saveFavoritesMyDog()" class="main--button">Save dog in favorites</button>
       </article>
       <article class="main--randomDogs">
         <img class="imageDog" id="img3" alt="random dog photo">
-        <button class="main--button">Save dog in favorites</button>
+        <button id="btn1" onclick="saveFavoritesMyDog()" class="main--button">Save dog in favorites</button>
       </article>
 
     </section>
